--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-	android:resizeableActivity = "true">
+        android:theme="@style/Theme.MaterialComponents.NoActionBar"
+        android:resizeableActivity = "true">
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name" >
