Revert "Change gradle action II"

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.4.0'
     repositories {
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
@@ -16,6 +17,7 @@ buildscript {
 
 allprojects {
     repositories {
+        jcenter()
         google()
         maven { url "https://jitpack.io" }
     }
