--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation "com.mikepenz:fastadapter-extensions-binding:5.3.2"
     implementation 'com.google.android.material:material:1.6.0-alpha01'
     implementation "androidx.constraintlayout:constraintlayout:2.1.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 }
