--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
           echo "::add-matcher::.github/kotlin-error-matcher.json"
           echo "::add-matcher::.github/kotlin-warning-matcher.json"
           rm gradle.properties
+          echo -e "android.enableJetifier=true\nandroid.useAndroidX=true" > gradle.properties
           ./gradlew assembleRelease
 
       - name: Rename Artifact
