--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 31
+    namespace "com.redkey.keyboard"
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.redkey.keyboard"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
@@ -44,4 +44,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0-alpha01'
     implementation "androidx.constraintlayout:constraintlayout:2.1.2"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation "com.bluelinelabs:conductor:3.2.0"
+    implementation "androidx.viewpager2:viewpager2:1.1.0"
 }
