--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # AndroidX support
-android.enableJetifier=true
+#android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536M \
 --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
